name:                gameboy
version:             0.1.0.0
author:              kyren
maintainer:          kerriganw@gmail.com
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      lib
  build-depends:       base == 4.*, vector >= 0.10, transformers >= 0.4, parsec >= 3.1
  exposed-modules:     Gameboy.Assembler, Gameboy.CPU, Gameboy.Emulation, Gameboy.Instructions, Gameboy.Screen, Gameboy.TestState, Gameboy.Util
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-patterns

executable emulator
  hs-source-dirs:      emulator
  main-is:             Emulator.hs
  build-depends:       base == 4.*, sdl2 >= 1.3, gameboy
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-patterns

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base == 4.*, hspec >= 2.0, heredoc >= 0.2, gameboy
  default-language:    Haskell2010
  ghc-options: -Wall -fwarn-incomplete-patterns
