name:                hsgb
version:             0.1.0.0
author:              kyren
maintainer:          kerriganw@gmail.com
build-type:          Simple
License:             PublicDomain
cabal-version:       >= 1.10

library
  hs-source-dirs:      lib
  build-depends:       base, vector, transformers, parsec, JuicyPixels, bytestring
  exposed-modules:     Gameboy.Assembler, Gameboy.CPU, Gameboy.Emulation, Gameboy.Instructions, Gameboy.Screen, Gameboy.TestState, Gameboy.Util
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-patterns -O2

executable testrom
  hs-source-dirs:      testrom
  main-is:             TestRom.hs
  build-depends:       base, bytestring, hsgb
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-patterns -O2

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  other-modules:       ProgramSpec, Gameboy.AssemblerSpec, Gameboy.InstructionSpec
  build-depends:       base, transformers, hspec, QuickCheck, heredoc, hsgb
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-patterns -O2
